Missing localization added

--- a/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.resx
+++ b/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.resx
@@ -118,87 +118,90 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="XAML_EveryXHours_Title" xml:space="preserve">
-	  <value>Every X hours</value>
+    <value>Every X hours</value>
   </data>
   <data name="XAML_EveryXMinutes_Title" xml:space="preserve">
-	  <value>Every X minutes</value>
+    <value>Every X minutes</value>
   </data>
   <data name="XAML_Hours_Text" xml:space="preserve">
-	  <value>hours</value>
+    <value>hours</value>
   </data>
   <data name="XAML_RunEvery_Text" xml:space="preserve">
-	  <value>Run every</value>
+    <value>Run every</value>
   </data>
   <data name="XAML_EveryXDays_Title" xml:space="preserve">
-	  <value>Every day</value>
+    <value>Every day</value>
   </data>
   <data name="XAML_RunEveryDayAt_Text" xml:space="preserve">
-	  <value>Run every day at</value>
+    <value>Run every day at</value>
   </data>
   <data name="XAML_StartingTimeInFormat_Text" xml:space="preserve">
-	  <value>(starting time in HH:MM format)</value>
+    <value>(starting time in HH:MM format)</value>
   </data>
   <data name="XAML_RunEveryWeekOn_Text" xml:space="preserve">
-	  <value>Run every week on day</value>
+    <value>Run every week on day</value>
   </data>
   <data name="XAML_AtTime_Text" xml:space="preserve">
-	  <value>at</value>
+    <value>at</value>
   </data>
   <data name="XAML_SundayShort_Text" xml:space="preserve">
-	  <value>Sun</value>
+    <value>Sun</value>
   </data>
   <data name="XAML_MondayShort_Text" xml:space="preserve">
-	  <value>Mon</value>
+    <value>Mon</value>
   </data>
   <data name="XAML_TuesdayShort_Text" xml:space="preserve">
-	  <value>Tue</value>
+    <value>Tue</value>
   </data>
   <data name="XAML_WednesdayShort_Text" xml:space="preserve">
-	  <value>Wen</value>
+    <value>Wen</value>
   </data>
   <data name="XAML_ThursdayShort_Text" xml:space="preserve">
-	  <value>Thu</value>
+    <value>Thu</value>
   </data>
   <data name="XAML_FridayShort_Text" xml:space="preserve">
-	  <value>Fri</value>
+    <value>Fri</value>
   </data>
   <data name="XAML_SaturdayShort_Text" xml:space="preserve">
-	  <value>Sat</value>
+    <value>Sat</value>
   </data>
   <data name="XAML_EveryMonth_Text" xml:space="preserve">
-	  <value>Every month</value>
+    <value>Every month</value>
   </data>
   <data name="XAML_RunEveryMonthAt_Text" xml:space="preserve">
-	  <value>Run every month on day</value>
+    <value>Run every month on day</value>
   </data>
   <data name="XAML_UseNearestWeekdayIfSelectedDayIsInTheWeekend_Text" xml:space="preserve">
-	  <value>Use nearest weekday if selected day is in the weekend</value>
+    <value>Use nearest weekday if selected day is in the weekend</value>
   </data>
   <data name="XAML_OnTheLastDayOfTheMonth_Text" xml:space="preserve">
-	  <value>On the last day of the month</value>
+    <value>On the last day of the month</value>
   </data>
   <data name="XAML_RunOnTheLastDayOfTheMonthAt_Text" xml:space="preserve">
-	  <value>Run on the last day of each month, at</value>
+    <value>Run on the last day of each month, at</value>
   </data>
   <data name="XAML_UseLastWeekdayOfTheMonthIfTheLastDayOfTheMonthIsInTheWeekend_Text" xml:space="preserve">
-	  <value>Use last weekday of the month if last day of the month is in the weekend</value>
+    <value>Use last weekday of the month if last day of the month is in the weekend</value>
   </data>
   <data name="XAML_CustomCronExpression_Text" xml:space="preserve">
-	  <value>Custom Cron expression</value>
+    <value>Custom Cron expression</value>
   </data>
   <data name="XAML_UseTheFollowingCronExpression_Text" xml:space="preserve">
-	  <value>Use the following custom Cron expression</value>
+    <value>Use the following custom Cron expression</value>
   </data>
   <data name="XAML_MustBeCompliantWithThe_Text" xml:space="preserve">
-	  <value>must be compliant with the</value>
+    <value>must be compliant with the</value>
   </data>
   <data name="XAML_QuartzSpecification_Text" xml:space="preserve">
-	  <value>Quartz specifications</value>
+    <value>Quartz specifications</value>
   </data>
   <data name="XAML_SchedulingDescriptionWithColon_Text" xml:space="preserve">
-	  <value>Scheduling description: </value>
+    <value>Scheduling description: </value>
   </data>
   <data name="XAML_CronExpressionWithColon_Text" xml:space="preserve">
-	  <value>Cron expression:</value>
+    <value>Cron expression:</value>
+  </data>
+  <data name="XAML_EveryWeek_Text" xml:space="preserve">
+    <value>Every week</value>
   </data>
 </root>
