--- a/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.da.resx
+++ b/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.da.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+	<!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,149 +59,158 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="XAML_EveryXMinutes_Title" xml:space="preserve">
+	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+		<xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+		<xsd:element name="root" msdata:IsDataSet="true">
+			<xsd:complexType>
+				<xsd:choice maxOccurs="unbounded">
+					<xsd:element name="metadata">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" />
+							</xsd:sequence>
+							<xsd:attribute name="name" use="required" type="xsd:string" />
+							<xsd:attribute name="type" type="xsd:string" />
+							<xsd:attribute name="mimetype" type="xsd:string" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="assembly">
+						<xsd:complexType>
+							<xsd:attribute name="alias" type="xsd:string" />
+							<xsd:attribute name="name" type="xsd:string" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="data">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+							<xsd:attribute ref="xml:space" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="resheader">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" />
+						</xsd:complexType>
+					</xsd:element>
+				</xsd:choice>
+			</xsd:complexType>
+		</xsd:element>
+	</xsd:schema>
+	<resheader name="resmimetype">
+		<value>text/microsoft-resx</value>
+	</resheader>
+	<resheader name="version">
+		<value>2.0</value>
+	</resheader>
+	<resheader name="reader">
+		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<resheader name="writer">
+		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<data name="XAML_EveryXSeconds_Title" xml:space="preserve">
+    <value>Hver X sekunder</value>
+  </data>
+	<data name="XAML_EveryXMinutes_Title" xml:space="preserve">
     <value>Hver X minut</value>
   </data>
-  <data name="XAML_EveryXHours_Title" xml:space="preserve">
+	<data name="XAML_EveryXHours_Title" xml:space="preserve">
     <value>Hver X time</value>
   </data>
-  <data name="XAML_Hours_Text" xml:space="preserve">
+	<data name="XAML_Hours_Text" xml:space="preserve">
     <value>time</value>
   </data>
-  <data name="XAML_RunEvery_Text" xml:space="preserve">
+	<data name="XAML_RunEvery_Text" xml:space="preserve">
     <value>Kør hver</value>
   </data>
-  <data name="XAML_EveryXDays_Title" xml:space="preserve">
+	<data name="XAML_EveryXDays_Title" xml:space="preserve">
     <value>Hver dag</value>
   </data>
-  <data name="XAML_RunEveryDayAt_Text" xml:space="preserve">
+	<data name="XAML_RunEveryDayAt_Text" xml:space="preserve">
     <value>Kør hver dag kl.</value>
   </data>
-  <data name="XAML_StartingTimeInFormat_Text" xml:space="preserve">
+	<data name="XAML_StartingTimeInFormat_Text" xml:space="preserve">
     <value>(starter på klokkesæt i TT:MM formatet)</value>
   </data>
-  <data name="XAML_RunEveryWeekOn_Text" xml:space="preserve">
+	<data name="XAML_RunEveryWeekOn_Text" xml:space="preserve">
     <value>Kør hver uge på dag</value>
   </data>
-  <data name="XAML_AtTime_Text" xml:space="preserve">
+	<data name="XAML_AtTime_Text" xml:space="preserve">
     <value>kl.</value>
   </data>
-  <data name="XAML_SundayShort_Text" xml:space="preserve">
+	<data name="XAML_SundayShort_Text" xml:space="preserve">
     <value>Søn</value>
   </data>
-  <data name="XAML_MondayShort_Text" xml:space="preserve">
+	<data name="XAML_MondayShort_Text" xml:space="preserve">
     <value>Man</value>
   </data>
-  <data name="XAML_TuesdayShort_Text" xml:space="preserve">
+	<data name="XAML_TuesdayShort_Text" xml:space="preserve">
     <value>Tir</value>
   </data>
-  <data name="XAML_WednesdayShort_Text" xml:space="preserve">
+	<data name="XAML_WednesdayShort_Text" xml:space="preserve">
     <value>Ons</value>
   </data>
-  <data name="XAML_ThursdayShort_Text" xml:space="preserve">
+	<data name="XAML_ThursdayShort_Text" xml:space="preserve">
     <value>Tor</value>
   </data>
-  <data name="XAML_FridayShort_Text" xml:space="preserve">
+	<data name="XAML_FridayShort_Text" xml:space="preserve">
     <value>Fre</value>
   </data>
-  <data name="XAML_SaturdayShort_Text" xml:space="preserve">
+	<data name="XAML_SaturdayShort_Text" xml:space="preserve">
     <value>Lør</value>
   </data>
-  <data name="XAML_EveryMonth_Text" xml:space="preserve">
+	<data name="XAML_EveryMonth_Text" xml:space="preserve">
     <value>Hver måned</value>
   </data>
-  <data name="XAML_RunEveryMonthAt_Text" xml:space="preserve">
+	<data name="XAML_RunEveryMonthAt_Text" xml:space="preserve">
     <value>Kør hver måned på dag</value>
   </data>
-  <data name="XAML_UseNearestWeekdayIfSelectedDayIsInTheWeekend_Text" xml:space="preserve">
+	<data name="XAML_UseNearestWeekdayIfSelectedDayIsInTheWeekend_Text" xml:space="preserve">
     <value>Brug nærmeste ugedag hvis den valgte dag er på en weekend</value>
   </data>
-  <data name="XAML_OnTheLastDayOfTheMonth_Text" xml:space="preserve">
+	<data name="XAML_OnTheLastDayOfTheMonth_Text" xml:space="preserve">
     <value>På den sidste dag i måneden</value>
   </data>
-  <data name="XAML_RunOnTheLastDayOfTheMonthAt_Text" xml:space="preserve">
+	<data name="XAML_RunOnTheLastDayOfTheMonthAt_Text" xml:space="preserve">
     <value>Kør på den sidste dag i måneden, kl.</value>
   </data>
-  <data name="XAML_UseLastWeekdayOfTheMonthIfTheLastDayOfTheMonthIsInTheWeekend_Text" xml:space="preserve">
+	<data name="XAML_UseLastWeekdayOfTheMonthIfTheLastDayOfTheMonthIsInTheWeekend_Text" xml:space="preserve">
     <value>Brug den sidste hverdag i måneden hvis den sidste dag i måneden er i weekenden</value>
   </data>
-  <data name="XAML_CustomCronExpression_Text" xml:space="preserve">
+	<data name="XAML_CustomCronExpression_Text" xml:space="preserve">
     <value>Brugerdefineret Cron streng</value>
   </data>
-  <data name="XAML_UseTheFollowingCronExpression_Text" xml:space="preserve">
+	<data name="XAML_UseTheFollowingCronExpression_Text" xml:space="preserve">
     <value>Brug den følgende Cron streng</value>
   </data>
-  <data name="XAML_MustBeCompliantWithThe_Text" xml:space="preserve">
+	<data name="XAML_MustBeCompliantWithThe_Text" xml:space="preserve">
     <value>skal stemme med</value>
   </data>
-  <data name="XAML_QuartzSpecification_Text" xml:space="preserve">
+	<data name="XAML_QuartzSpecification_Text" xml:space="preserve">
     <value>Quartz specifikation</value>
   </data>
-  <data name="XAML_SchedulingDescriptionWithColon_Text" xml:space="preserve">
+	<data name="XAML_SchedulingDescriptionWithColon_Text" xml:space="preserve">
     <value>Intervals beskrivelse:</value>
   </data>
-  <data name="XAML_CronExpressionWithColon_Text" xml:space="preserve">
+	<data name="XAML_CronExpressionWithColon_Text" xml:space="preserve">
     <value>Cron streng:</value>
   </data>
-  <data name="XAML_EveryWeek_Text" xml:space="preserve">
+	<data name="XAML_EveryWeek_Text" xml:space="preserve">
 	  <value>Hver uge</value>
+  </data>
+	<data name="XAML_Minutes_Text" xml:space="preserve">
+    <value>minutter</value>
+  </data>
+	<data name="XAML_Seconds_Text" xml:space="preserve">
+    <value>sekunder</value>
   </data>
 </root>
