--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+1.3.0
+	Added "Every X seconds" mode
+	Added "Every nth day of the week" mode
+	Added properties to selectively show or hide every mode
+
 1.2.2
 	Fixed "unable to load assembly" error
 
