--- a/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.resx
+++ b/MasterT.WPF.CrontabBuilder/Resources/UserControl_CrontabEditorControl.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-	<!-- 
+  <!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,158 +59,206 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-		<xsd:element name="root" msdata:IsDataSet="true">
-			<xsd:complexType>
-				<xsd:choice maxOccurs="unbounded">
-					<xsd:element name="metadata">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" />
-							</xsd:sequence>
-							<xsd:attribute name="name" use="required" type="xsd:string" />
-							<xsd:attribute name="type" type="xsd:string" />
-							<xsd:attribute name="mimetype" type="xsd:string" />
-							<xsd:attribute ref="xml:space" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="assembly">
-						<xsd:complexType>
-							<xsd:attribute name="alias" type="xsd:string" />
-							<xsd:attribute name="name" type="xsd:string" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="data">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-							<xsd:attribute ref="xml:space" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="resheader">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" />
-						</xsd:complexType>
-					</xsd:element>
-				</xsd:choice>
-			</xsd:complexType>
-		</xsd:element>
-	</xsd:schema>
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>2.0</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<data name="XAML_EveryXHours_Title" xml:space="preserve">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="XAML_EveryXHours_Title" xml:space="preserve">
     <value>Every X hours</value>
   </data>
-	<data name="XAML_EveryXSeconds_Title" xml:space="preserve">
+  <data name="XAML_EveryXSeconds_Title" xml:space="preserve">
     <value>Every X seconds</value>
   </data>
-	<data name="XAML_EveryXMinutes_Title" xml:space="preserve">
+  <data name="XAML_EveryXMinutes_Title" xml:space="preserve">
     <value>Every X minutes</value>
   </data>
-	<data name="XAML_Hours_Text" xml:space="preserve">
+  <data name="XAML_Hours_Text" xml:space="preserve">
     <value>hours</value>
   </data>
-	<data name="XAML_Minutes_Text" xml:space="preserve">
+  <data name="XAML_Minutes_Text" xml:space="preserve">
     <value>minutes</value>
   </data>
-	<data name="XAML_RunEvery_Text" xml:space="preserve">
+  <data name="XAML_RunEvery_Text" xml:space="preserve">
     <value>Run every</value>
   </data>
-	<data name="XAML_EveryXDays_Title" xml:space="preserve">
+  <data name="XAML_EveryXDays_Title" xml:space="preserve">
     <value>Every day</value>
   </data>
-	<data name="XAML_RunEveryDayAt_Text" xml:space="preserve">
+  <data name="XAML_RunEveryDayAt_Text" xml:space="preserve">
     <value>Run every day at</value>
   </data>
-	<data name="XAML_StartingTimeInFormat_Text" xml:space="preserve">
+  <data name="XAML_StartingTimeInFormat_Text" xml:space="preserve">
     <value>(starting time in HH:MM format)</value>
   </data>
-	<data name="XAML_RunEveryWeekOn_Text" xml:space="preserve">
+  <data name="XAML_RunEveryWeekOn_Text" xml:space="preserve">
     <value>Run every week on day</value>
   </data>
-	<data name="XAML_AtTime_Text" xml:space="preserve">
+  <data name="XAML_AtTime_Text" xml:space="preserve">
     <value>at</value>
   </data>
-	<data name="XAML_SundayShort_Text" xml:space="preserve">
+  <data name="XAML_SundayShort_Text" xml:space="preserve">
     <value>Sun</value>
   </data>
-	<data name="XAML_MondayShort_Text" xml:space="preserve">
+  <data name="XAML_MondayShort_Text" xml:space="preserve">
     <value>Mon</value>
   </data>
-	<data name="XAML_TuesdayShort_Text" xml:space="preserve">
+  <data name="XAML_TuesdayShort_Text" xml:space="preserve">
     <value>Tue</value>
   </data>
-	<data name="XAML_WednesdayShort_Text" xml:space="preserve">
+  <data name="XAML_WednesdayShort_Text" xml:space="preserve">
     <value>Wen</value>
   </data>
-	<data name="XAML_ThursdayShort_Text" xml:space="preserve">
+  <data name="XAML_ThursdayShort_Text" xml:space="preserve">
     <value>Thu</value>
   </data>
-	<data name="XAML_FridayShort_Text" xml:space="preserve">
+  <data name="XAML_FridayShort_Text" xml:space="preserve">
     <value>Fri</value>
   </data>
-	<data name="XAML_SaturdayShort_Text" xml:space="preserve">
+  <data name="XAML_SaturdayShort_Text" xml:space="preserve">
     <value>Sat</value>
   </data>
-	<data name="XAML_EveryMonth_Text" xml:space="preserve">
+  <data name="XAML_EveryMonth_Text" xml:space="preserve">
     <value>Every month</value>
   </data>
-	<data name="XAML_RunEveryMonthAt_Text" xml:space="preserve">
+  <data name="XAML_RunEveryMonthAt_Text" xml:space="preserve">
     <value>Run every month on day</value>
   </data>
-	<data name="XAML_UseNearestWeekdayIfSelectedDayIsInTheWeekend_Text" xml:space="preserve">
+  <data name="XAML_UseNearestWeekdayIfSelectedDayIsInTheWeekend_Text" xml:space="preserve">
     <value>Use nearest weekday if selected day is in the weekend</value>
   </data>
-	<data name="XAML_OnTheLastDayOfTheMonth_Text" xml:space="preserve">
+  <data name="XAML_OnTheLastDayOfTheMonth_Text" xml:space="preserve">
     <value>On the last day of the month</value>
   </data>
-	<data name="XAML_RunOnTheLastDayOfTheMonthAt_Text" xml:space="preserve">
+  <data name="XAML_RunOnTheLastDayOfTheMonthAt_Text" xml:space="preserve">
     <value>Run on the last day of each month, at</value>
   </data>
-	<data name="XAML_UseLastWeekdayOfTheMonthIfTheLastDayOfTheMonthIsInTheWeekend_Text" xml:space="preserve">
+  <data name="XAML_UseLastWeekdayOfTheMonthIfTheLastDayOfTheMonthIsInTheWeekend_Text" xml:space="preserve">
     <value>Use last weekday of the month if last day of the month is in the weekend</value>
   </data>
-	<data name="XAML_CustomCronExpression_Text" xml:space="preserve">
+  <data name="XAML_CustomCronExpression_Text" xml:space="preserve">
     <value>Custom Cron expression</value>
   </data>
-	<data name="XAML_UseTheFollowingCronExpression_Text" xml:space="preserve">
+  <data name="XAML_UseTheFollowingCronExpression_Text" xml:space="preserve">
     <value>Use the following custom Cron expression</value>
   </data>
-	<data name="XAML_MustBeCompliantWithThe_Text" xml:space="preserve">
+  <data name="XAML_MustBeCompliantWithThe_Text" xml:space="preserve">
     <value>must be compliant with the</value>
   </data>
-	<data name="XAML_QuartzSpecification_Text" xml:space="preserve">
+  <data name="XAML_QuartzSpecification_Text" xml:space="preserve">
     <value>Quartz specifications</value>
   </data>
-	<data name="XAML_SchedulingDescriptionWithColon_Text" xml:space="preserve">
+  <data name="XAML_SchedulingDescriptionWithColon_Text" xml:space="preserve">
     <value>Scheduling description: </value>
   </data>
-	<data name="XAML_CronExpressionWithColon_Text" xml:space="preserve">
+  <data name="XAML_CronExpressionWithColon_Text" xml:space="preserve">
     <value>Cron expression:</value>
   </data>
-	<data name="XAML_EveryWeek_Text" xml:space="preserve">
+  <data name="XAML_EveryWeek_Text" xml:space="preserve">
     <value>Every week</value>
   </data>
-	<data name="XAML_Seconds_Text" xml:space="preserve">
+  <data name="XAML_Seconds_Text" xml:space="preserve">
     <value>seconds</value>
+  </data>
+  <data name="XAML_CurrentlySelectedSchedule_Header" xml:space="preserve">
+    <value>Currently selected schedule</value>
+  </data>
+  <data name="XAML_EveryNthDayOfWeek_Title" xml:space="preserve">
+    <value>Every nth week day</value>
+  </data>
+  <data name="XAML_1st" xml:space="preserve">
+    <value>1st</value>
+  </data>
+  <data name="XAML_2nd" xml:space="preserve">
+    <value>2nd</value>
+  </data>
+  <data name="XAML_3rd" xml:space="preserve">
+    <value>3rd</value>
+  </data>
+  <data name="XAML_4th" xml:space="preserve">
+    <value>4th</value>
+  </data>
+  <data name="XAML_5th" xml:space="preserve">
+    <value>5th</value>
+  </data>
+  <data name="XAML_Monday" xml:space="preserve">
+    <value>Monday</value>
+  </data>
+  <data name="XAML_Tuesday" xml:space="preserve">
+    <value>Tuesday</value>
+  </data>
+  <data name="XAML_Wednesday" xml:space="preserve">
+    <value>Wednesday</value>
+  </data>
+  <data name="XAML_Thursday" xml:space="preserve">
+    <value>Thursday</value>
+  </data>
+  <data name="XAML_Friday" xml:space="preserve">
+    <value>Friday</value>
+  </data>
+  <data name="XAML_Saturday" xml:space="preserve">
+    <value>Saturday</value>
+  </data>
+  <data name="XAML_Sunday" xml:space="preserve">
+    <value>Sunday</value>
+  </data>
+  <data name="XAML_RunEvery" xml:space="preserve">
+    <value>Run every </value>
+  </data>
+  <data name="XAML_OfTheWeekAt" xml:space="preserve">
+    <value>of the week at</value>
   </data>
 </root>
